<resources>
    <string name="app_name">app num 1 </string>
    <string name="text">plahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplahplahplahplahplahplahplahplahplahapplahplah</string>
    <string name="description">Description</string>
    <string name="dpl">DPL</string>
    <string name="color">Color</string>
    <string name="model">Model</string>
    <string name="car_description">car</string>
    <string name="search">Search</string>
</resources>